--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                 <div class="container-fluid">
 
                     <div class="row mb-4">
-                        <div class="col-sm-8">
-                            <div class="row mb-4">
+                        <div class="col-sm-8" style="display: flex; flex-direction: column; height: auto">
+                            <div class="row">
                                 <div class="col-sm-6">
                                     <div class="custom-card">
                                         <div class="container-fluid p-0">
@@ -246,7 +246,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" style="margin-top: auto">
                                 <div class="col-sm-12">
                                     <div class="card shadow">
                                         <div class="card-header py-3">
@@ -265,7 +265,7 @@
                             <div class="card shadow h-100 mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    class="p-4 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">Hit Rate</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
@@ -283,20 +283,28 @@
                                     </div>
                                 </div>
                                 <!-- Card Body -->
-                                <div class="card-body">
-                                    <div class="chart-pie pt-4 pb-2">
+                                <div class="chart-wrapper" style="padding-bottom: 24px">
+                                    <div class="chart-pie">
                                         <canvas id="myPieChart"></canvas>
+                                        <div class="inner-circle">
+                                            <p class="m-0">64%</p>
+                                            <p class="m-0">Total Hit Rate</p>
+                                        </div>
                                     </div>
-                                    <div class="mt-4 text-center small">
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> Direct
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> Social
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Referral
-                                        </span>
+                                    <div class="detail-chart">
+                                        <div class="detail-row">
+                                            <p class="font-weight-bolder m-0">Total Proposal Terkirim</p>
+                                            <p class="font-weight-bolder m-0">231</p>
+                                        </div>
+                                        <hr class="dropdown-divider "style="margin: 24px 0px">
+                                         <div class="detail-row" style="margin-bottom: 24px">
+                                            <p class="m-0">Proposal Sukses</p>
+                                            <p class="m-0">126</p>
+                                        </div>
+                                         <div class="detail-row">
+                                            <p class="m-0">Proposal Gagal</p>
+                                            <p class="m-0">105</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
