--- a/login.html
+++ b/login.html
@@ -18,74 +18,45 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gray-800" style="height: 100vh">
+    <div class="container h-100 ">
+        <div class="row justify-content-center align-items-center h-100">
+            <div class="card-auth">
+                <a class="d-flex align-items-center justify-content-center" href="index.html">
+                    <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+                </a>
+                <p class="h3 font-weight-bolder text-center text-dark" style="margin: 40px 0px;">Selamat datang <br/>
+                di CRM Deka Insight</p>
 
-    <div class="container">
-
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                    </div>
-                                    <form class="user">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                            Login
-                                        </a>
-                                        <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Login with Google
-                                        </a>
-                                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
-                                    </form>
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                 <form class="user">
+                     <div class="mb-5">
+                         <div class="form-group mb-4">
+                             <p class="font-weight-bolder" style="margin-bottom: 12px">Email</p>
+                             <input type="email" class="form-control form-control-user"
+                                 id="exampleInputEmail" aria-describedby="emailHelp"
+                                 placeholder="Masukkan email anda">
+                         </div>
+                         <div class="form-group">
+                             <p class="font-weight-bolder"  style="margin-bottom: 12px">Password</p>
+                             <input type="password" class="form-control form-control-user"
+                                 id="exampleInputPassword" placeholder="Masukkan password">
+                         </div>
+                         <div class="row justify-content-end no-gutters">
+                             <a href="/reset-password.html" class="font-weight-bolder text-gray-600">
+                                 Forgot Password?
+                             </a>
+                         </div>
+                     </div>
+                    <a href="index.html" class="btn btn-dark bg-gray-700 btn-user btn-block">
+                        Login
+                    </a>
+                </form>
             </div>
-
         </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript-->
