--- a/client.html
+++ b/client.html
@@ -516,7 +516,7 @@
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
-                    class="table table-custom"
+                    class="table table-custom table-hover"
                     id="dataTable"
                     width="100%"
                     cellspacing="0"
