[edit] finishing wireframe

--- a/client.html
+++ b/client.html
@@ -284,7 +284,12 @@
                 class="d-flex flex-row align-items-center justify-content-between mb-2"
               >
                 <div class="col-3 p-0">
-                  <div class="form-group">
+                  <div class="input-group input-focus">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text bg-white"
+                        ><i class="fa fa-search"></i
+                      ></span>
+                    </div>
                     <input
                       type="text"
                       class="form-control"
